// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> should correctly handle clicks if disabled and with optional params 1`] = `
<Page
  isActive={true}
  isDisabled={true}
  onClick={[MockFunction]}
  pageNumber={0}
  pageText="Some text"
>
  <styled__PageWrapper
    isActive={true}
    onClick={[Function]}
  >
    <li
      className="styled__PageWrapper-dxl0zg-0 gYkfmV"
      onClick={[Function]}
    >
      <span>
        Some text
      </span>
    </li>
  </styled__PageWrapper>
</Page>
`;

exports[`<Page /> should correctly handle clicks with mandatory props 1`] = `
<Page
  isActive={false}
  isDisabled={false}
  onClick={[MockFunction]}
  pageNumber={0}
>
  <styled__PageWrapper
    isActive={false}
    onClick={[Function]}
  >
    <li
      className="styled__PageWrapper-dxl0zg-0 fOgClc"
      onClick={[Function]}
    >
      <span />
    </li>
  </styled__PageWrapper>
</Page>
`;
